k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-deployment
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      type: frontend # This deployment manages pods that have label type=frontend
  template:
    metadata:
      labels:
        type: frontend
    spec:
      nodeSelector: # Schedule only on nodes that have label frontend
        type: frontend
      containers:
        - name: test-app
          image: ghcr.io/nodefitter/sampleapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
  namespace: frontend
  labels:
    type: frontend
spec:
  selector:
    type: frontend # Service will have all pod with label "type" set to "frontend"
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "frontend-network-policy"
  namespace: frontend # Apply the network policy on namespace frontend
spec:
  podSelector:
    matchLabels:
      type: frontend # Apply the network policy to pods having label type=frontend (and, because of namespace metadata, in namespace frontend)
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
      - port: 8080
    - from: # Allow also traffic for monitoring
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
      ports:
        - port: 8080
  egress:
    - to: # Allow communication only to pods in backend namespace with label type=backend
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: backend
        podSelector:
            matchLabels:
              type: backend
      ports:
        - port: 3306
    - to: # Allow DNS
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
