k8s/mariadb.yml
# MariaDB service
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: backend
  labels:
    type: backend
spec:
  selector:
    type: backend
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
    - name: metrics
      port: 9104
      targetPort: 9104
  type: ClusterIP
---
# MariaDB Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment-backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        type: backend
        app: mariadb
    spec:
      nodeSelector: # Schedule only on nodes that have label frontend
        type: backend
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          readinessProbe:
            exec:
              command:
                - healthcheck.sh
                - --connect
                - --innodb_initialized
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
        - name: mysql-metrics
          image: prom/mysqld-exporter:latest
          args:
            - "--config.my-cnf=/.config.cnf"
          ports:
            - containerPort: 9104
          volumeMounts:
            - name: mysql-exporter-config
              mountPath: /.config.cnf
              subPath: .config.cnf
              readOnly: true
      volumes:
        - name: initdb
          configMap:
            name: mariadb-initdb
        - name: mysql-exporter-config
          secret:
            secretName: mysql-exporter-secret
            items:
              - key: .config.cnf
                path: .config.cnf
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "backend-network-policy"
  namespace: backend # Apply the network policy on namespace backend
spec:
  podSelector:
    matchLabels:
      type: backend # Apply the network policy to pods having label type=backend (and, because of namespace metadata, in namespace backend)
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: # Limit communication from only pods that are in namespace frontend and that also have label type=frontend and only if they are to port 80
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: frontend
        podSelector:
          matchLabels:
            type: frontend
      ports:
        - port: 3306
    - from: # Allow also traffic for monitoring
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9104 # TODO: adjust network policy to allow prometheus metrics retrieval
    - from: # Allow connection from other pods in backend namespace with label type=backend
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: backend
        podSelector:
          matchLabels:
            type: backend # TODO: remove backend<->backend rule if not necessary
  egress:
    - to: # Allow connection to other pods in backend namespace with label type=backend
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: backend
        podSelector:
          matchLabels:
            type: backend # TODO: remove backend<->backend rule if not necessary
    - to: # Allow DNS
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
